--- a/.github/workflows/build-and-deploy.yaml
+++ b/.github/workflows/build-and-deploy.yaml
@@ -11,12 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install and Build 🔧
         run: |
           npm ci
           npm run build
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
   
       - name: Upload Pages Artefacts
         id: upload
